fixed spacing on the nav links

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,6 @@ h3 {
 
 
 body {    
-    background-image: url(../images/bg4.png);
     background-color: #272727;
     margin: 0;   
     background-size: cover;
@@ -312,7 +311,7 @@ h1 {
   text-decoration: none;
   color: #ffffff;
   margin: 0 5px;
-
+  gap: 5px;
 
 }
 
@@ -345,6 +344,7 @@ h1 {
   opacity: 1;
 }
 
+
 .link-icon {
   width: 28px;
   height: 28px;
@@ -352,12 +352,12 @@ h1 {
   flex-shrink: 0;
   left: 18px;
   position: absolute;
-}
-
-.link-icon svg {
+  }
+  
+  .link-icon svg {
   width: 28px;
   height: 28px;
-}
+  }
 
 .link-title {
   transform: translateX(100%);
